add websocket transcode